# GameRewardDemo

./: .gitignore  CMakeLists.txt  README.md  setup.bat
Classes/: AppDelegate.cpp  AppDelegate.h  Constants.h
Classes/Layers/: InventoryBarLayer.cpp  InventoryBarLayer.h  LevelUpEffectLayer.cpp  LevelUpEffectLayer.h  RewardFlyLayer.cpp  RewardFlyLayer.h
Classes/Managers/: DataManager.cpp  DataManager.h
Classes/Models/: ItemData.h  LevelData.h  PlayerData.h
Classes/Scenes/: BattleScene.cpp  BattleScene.h  LevelSelectScene.cpp  LevelSelectScene.h  ResultScene.cpp  ResultScene.h
Classes/UI/: AttributePanel.cpp  AttributePanel.h  IconFactory.cpp  IconFactory.h  RewardItemNode.cpp  RewardItemNode.h
proj.win32/: build-cfg.json  game.rc  main.cpp  main.h  resource.h
